# JSS31COM1

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
day1/: 01 Installing DESDEO.ipynb  02 Defining a problem.ipynb  Assignment.md  results.csv
day2/: 01 Simple plots.ipynb  02 Parallel coordinates.ipynb  03 Other High-dimensional Viz.ipynb  assignment.md  imported data.html  simple_scatter.html
day3/: 01 The payoff-table method.ipynb  02 Scalarizing functions.ipynb  03 Using interactive methods.ipynb  03 Using interactive methods_example.ipynb  Assignment.md
day4/: 02 Interactive Optimization.ipynb  Evolutionary Algorithms.ipynb  Interactive Optimization.ipynb  assignment.md
day5/: 01 Surrogate-assisted optimization.ipynb  02 Combining MCDM and EMO.ipynb  assignment.md  simple_data.csv
