[tool.poetry]
name = "jss31com1"
version = "0.1.0"
description = "Notebooks for demonstration in the JSS31 COM1 course."
authors = ["Bhupinder Saini <bhupinder.saini2.71@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
jupyterlab = "^3.4.5"
desdeo = "^1.1.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
